--- a/trunk/CarmenSanDiegoDominio/pom.xml
+++ b/trunk/CarmenSanDiegoDominio/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>CarmenSanDiegoDominio</groupId>
   <artifactId>CarmenSanDiegoDominio</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>0.0.2</version>
   
   <parent>
     <groupId>org.uqbar-project</groupId>
@@ -35,4 +35,5 @@
   
   
   <packaging>pom</packaging>
+
 </project>
