--- a/trunk/CarmenSanDiegoAppEscritorioArena/pom.xml
+++ b/trunk/CarmenSanDiegoAppEscritorioArena/pom.xml
@@ -13,4 +13,18 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
   	<artifactId>CarmenSanDiegoDominio</artifactId>
   	<version>0.0.2</version>
   </parent>
+  
+    <dependencies>
+    
+       <dependency>
+           <groupId>CarmenSanDiegoDominio</groupId>
+           <artifactId>CarmenSanDiegoDominio</artifactId>
+           <version>0.0.2</version>
+       </dependency>
+       
+       
+    </dependencies>
+  
+  
+  
 </project>
