--- a/CarmenSanDiegoDominio/pom.xml
+++ b/CarmenSanDiegoDominio/pom.xml
@@ -1,37 +1,72 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>CarmenSanDiegoDominio</groupId>
-  <artifactId>CarmenSanDiegoDominio</artifactId>
-  <version>0.0.2</version>
-  
-   <parent>
-    <groupId>org.uqbar-project</groupId>
-    <artifactId>uqbar-xtend-parent</artifactId>
-    <version>2.6.2</version>
-  </parent>
-  
-  <dependencies>
-       <dependency>
-           <groupId>org.uqbar-project</groupId>
-           <artifactId>arena-jface</artifactId>
-           <version>3.4-SNAPSHOT</version>
-       </dependency>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>CarmenSanDiegoDominio</groupId>
+	<artifactId>CarmenSanDiegoDominio</artifactId>
+	<version>0.0.2</version>
 
-       <dependency>
-           <groupId>junit</groupId>
-           <artifactId>junit</artifactId>
-           <version>4.11</version>
-           <scope>test</scope>
-       </dependency>
-       
-       <dependency>
-         	<groupId>org.mockito</groupId>
-  			<artifactId>mockito-all</artifactId>
-  			<version>1.9.5</version>
-  			<scope>test</scope>
-  	   </dependency>
-       
-   </dependencies>
-  
-  <packaging>pom</packaging>
+	<!-- <parent> -->
+	<!-- <groupId>org.uqbar-project</groupId> -->
+	<!-- <artifactId>uqbar-xtend-parent</artifactId> -->
+	<!-- <version>2.6.2</version> -->
+	<!-- </parent> -->
+
+	<build>
+		<plugins>
+
+			<plugin>
+				<groupId>org.eclipse.xtend</groupId>
+				<artifactId>xtend-maven-plugin</artifactId>
+				<version>2.6.2</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>compile</goal>
+							<goal>testCompile</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>${project.build.directory}/xtend-gen/main</outputDirectory>
+							<testOutputDirectory>${project.build.directory}/xtend-gen/test</testOutputDirectory>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+
+		</plugins>
+	</build>
+
+	<dependencies>
+	
+		<dependency>
+			<groupId>org.eclipse.xtend</groupId>
+			<artifactId>org.eclipse.xtend.lib</artifactId>
+			<version>2.6.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.uqbar-project</groupId>
+			<artifactId>arena-jface</artifactId>
+			<version>3.4-SNAPSHOT</version>
+		</dependency>
+
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.11</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-all</artifactId>
+			<version>1.9.5</version>
+			<scope>test</scope>
+		</dependency>
+
+
+
+	</dependencies>
+
+
+
 </project>
