--- a/CarmenSanDiegoWicket/pom.xml
+++ b/CarmenSanDiegoWicket/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
@@ -8,19 +7,25 @@
 	<artifactId>CarmenSanDiegoWicket</artifactId>
 	<packaging>war</packaging>
 	<version>1.0-SNAPSHOT</version>
-	
-		
+
+
 	<parent>
 		<groupId>org.uqbar-project</groupId>
 		<artifactId>uqbar-xtend-parent</artifactId>
 		<version>2.6.2</version>
 	</parent>
-	
+
+	<!-- <parent> -->
+	<!-- <groupId>CarmenSanDiegoDominio</groupId> -->
+	<!-- <artifactId>CarmenSanDiegoDominio</artifactId> -->
+	<!-- <version>0.0.2</version> -->
+	<!-- </parent> -->
+
 	<properties>
 		<jetty.version>6.1.4</jetty.version>
 		<jetty.version>7.6.3.v20120416</jetty.version>
 	</properties>
-	
+
 	<dependencies>
 		<!-- UQBAR -->
 		<dependency>
@@ -34,8 +39,8 @@
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 		<!-- /UQBAR -->
-		
-		<!--  JUNIT DEPENDENCY FOR TESTING -->
+
+		<!-- JUNIT DEPENDENCY FOR TESTING -->
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -43,14 +48,21 @@
 			<scope>test</scope>
 		</dependency>
 
-		<!--  JETTY DEPENDENCIES FOR TESTING  -->
+		<!-- JETTY DEPENDENCIES FOR TESTING -->
 		<dependency>
 			<groupId>org.eclipse.jetty.aggregate</groupId>
 			<artifactId>jetty-all-server</artifactId>
 			<version>${jetty.version}</version>
 			<scope>provided</scope>
 		</dependency>
-		<!--  /JETTY DEPENDENCIES FOR TESTING  -->
+		<!-- /JETTY DEPENDENCIES FOR TESTING -->
+
+		<dependency>
+			<groupId>CarmenSanDiegoDominio</groupId>
+			<artifactId>CarmenSanDiegoDominio</artifactId>
+			<version>0.0.2</version>
+		</dependency>
+
 	</dependencies>
 	<build>
 		<resources>
@@ -99,4 +111,4 @@
 			</snapshots>
 		</repository>
 	</repositories>
-	</project>
+</project>
