--- a/CarmenSanDiegoAppAndroid/bin/AndroidManifest.xml
+++ b/CarmenSanDiegoAppAndroid/bin/AndroidManifest.xml
@@ -42,6 +42,14 @@
             	android:name="android.support.PARENT_ACTIVITY"
             	android:value=".MainActivity" />
     	</activity>
+    	
+        <activity
+        	android:name=".FinDialog"
+        	android:parentActivityName=".MainActivity" >
+        	<meta-data
+            	android:name="android.support.PARENT_ACTIVITY"
+            	android:value=".MainActivity" />
+    	</activity>
     </application>
 
 </manifest>
